--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Simone Murgia · Data Integration Engineer</title>
-  <meta name="description" content="CV interattivo e portfolio di Simone Murgia, Data Integration Engineer." />
-  <meta property="og:title" content="Simone Murgia · Data Integration Engineer" />
-  <meta property="og:description" content="CV interattivo e portfolio." />
+  <title>Simone Murgia · Advanced Data Integration Engineer</title>
+  <meta name="description" content="CV interattivo e portfolio di Simone Murgia, Advanced Data Integration Engineer presso NTT Data Italia." />
+  <meta property="og:title" content="Simone Murgia · Advanced Data Integration Engineer" />
+  <meta property="og:description" content="Esperto in Big Data, ETL/ELT, e integrazione dati per progetti enterprise." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="./og-image.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,160 +50,114 @@
         <div class="avatar" aria-hidden="true"></div>
         <div>
           <h1>Simone Murgia</h1>
-          <div class="subtitle">Data Integration Engineer · NTT DATA</div>
+          <div class="subtitle">Advanced Data Integration Engineer · NTT Data Italia</div>
           <div class="badges" id="header-badges"></div>
         </div>
       </div>
       <nav class="cta">
         <a class="btn primary" href="#progetti">Guarda i progetti</a>
-        <a class="btn" id="download-pdf" href="./Simone-Murgia-CV.pdf">Scarica PDF</a>
-        <a class="btn" id="contact-email" href="mailto:">Contattami</a>
-        <a class="btn" id="contact-linkedin" target="_blank" rel="noreferrer">LinkedIn</a>
+        <a class="btn" href="mailto:S.Murgia1990@gmail.com">Contattami</a>
+        <a class="btn" href="https://www.linkedin.com/in/simone-murgia/" target="_blank">LinkedIn</a>
       </nav>
     </header>
 
-    <div class="grid">
-      <section id="profilo">
-        <h2>Profilo</h2>
-        <div id="about"></div>
-      </section>
+    <section id="profilo">
+      <h2>Profilo</h2>
+      <p>Ingegnere dei dati con oltre 4 anni di esperienza in integrazione, orchestrazione e trasformazione di dati su piattaforme Big Data e cloud. Attualmente impegnato in progetti enterprise per ENEL X presso NTT Data Italia. Competenze trasversali su pipeline ETL/ELT, architetture distribuite e sviluppo dashboard di business intelligence.</p>
+    </section>
 
-      <section id="skills">
-        <h2>Competenze</h2>
-        <div class="chips" id="skills-chips"></div>
-      </section>
-    </div>
+    <section id="skills">
+      <h2>Competenze</h2>
+      <div class="chips">
+        <span class="chip">Big Data</span>
+        <span class="chip">ETL / ELT</span>
+        <span class="chip">Talend</span>
+        <span class="chip">Informatica PowerCenter</span>
+        <span class="chip">Hive / Impala</span>
+        <span class="chip">Kafka</span>
+        <span class="chip">AWS</span>
+        <span class="chip">TIBCO Spotfire</span>
+        <span class="chip">Python</span>
+        <span class="chip">SQL / Oracle / PostgreSQL</span>
+        <span class="chip">MongoDB</span>
+        <span class="chip">JavaScript / HTML / CSS / Bootstrap</span>
+      </div>
+    </section>
 
     <section id="esperienza">
-      <h2>Esperienza</h2>
-      <div id="experience-list"></div>
+      <h2>Esperienza professionale</h2>
+      <div class="item">
+        <h3>Advanced Data Integration Engineer · NTT Data Italia</h3>
+        <div class="meta">31/07/2020 – Presente · Roma, Italia</div>
+        <ul>
+          <li>Manutenzione e sviluppo full-stack della Big Data Platform Enel X, con team internazionali.</li>
+          <li>Progettazione e manutenzione di dashboard business (TIBCO Spotfire, SAPBW/4HANA, Oracle SQL, HTML5, TypeScript).</li>
+          <li>Sviluppo flussi dati da contatori 2G al datamart per prodotto EnelOne (Kafka, Informatica Power Center, Hive, MongoDB).</li>
+        </ul>
+      </div>
+      <div class="item">
+        <h3>Junior Big Data Developer · Best Engage</h3>
+        <div class="meta">31/01/2020 – 30/07/2020 · Roma, Italia</div>
+        <ul>
+          <li>Ingestione e elaborazione dati IoT con tecnologie Big Data (SQL, Spark, Kafka, Flink, Python).</li>
+        </ul>
+      </div>
+      <div class="item">
+        <h3>Co‑Founder & Company Administrator · Teeto Gaming / GGEZ Gaming</h3>
+        <div class="meta">2016 – 2019 · Roma, Italia</div>
+        <ul>
+          <li>Sviluppo azienda eSport Pub, assistenza IT e web design (NodeJS, Express, SQL, jQuery, Bootstrap).</li>
+        </ul>
+      </div>
+      <div class="item">
+        <h3>Digital Archivist · Iomatica Sas</h3>
+        <div class="meta">2013 – 2016 · Roma, Italia</div>
+        <ul>
+          <li>Controllo consistenza dati e bonifica dati per Rai Archivio (media televisivo e radiofonico).</li>
+        </ul>
+      </div>
     </section>
 
-    <section id="progetti">
-      <h2>Progetti / Portfolio</h2>
-      <div id="projects-list"></div>
+    <section id="istruzione">
+      <h2>Istruzione e Formazione</h2>
+      <div class="item">
+        <h3>Academy Big Data · Formatemp</h3>
+        <div class="meta">2020 – Corso di formazione · 200 ore</div>
+        <p>Formazione completa su tecnologie Big Data e strumenti correlati.</p>
+      </div>
+      <div class="item">
+        <h3>Laurea in Biologia · Università di Tor Vergata</h3>
+        <div class="meta">2009 – 2015 · Roma, Italia</div>
+      </div>
+      <div class="item">
+        <h3>Liceo Scientifico Statale E. Majorana</h3>
+        <div class="meta">2004 – 2009 · Roma, Italia · Voto: 75/100</div>
+      </div>
     </section>
 
-    <div class="grid">
-      <section id="istruzione">
-        <h2>Istruzione</h2>
-        <div id="education-list"></div>
-      </section>
-      <section id="certs">
-        <h2>Certificazioni</h2>
-        <div id="cert-list"></div>
-      </section>
-    </div>
+    <section id="certs">
+      <h2>Certificazioni</h2>
+      <ul>
+        <li>MongoDB SI Architect Certification (2023)</li>
+        <li>TIBCO Spotfire® Certified Professional</li>
+        <li>Web Developer Bootcamp (Udemy, 2017)</li>
+        <li>The Modern Python 3 Bootcamp (Udemy, 2018)</li>
+      </ul>
+    </section>
+
+    <section id="lingue">
+      <h2>Lingue</h2>
+      <ul>
+        <li><strong>Italiano</strong> – Madrelingua</li>
+        <li><strong>Inglese</strong> – C1 (comprensione), B2 (produzione)</li>
+        <li><strong>Giapponese</strong> – A2</li>
+      </ul>
+    </section>
 
     <footer>
-      <small>© <span id="year"></span> Simone Murgia — Questo sito è open‑source su GitHub Pages</small>
+      <small>© <span id="year"></span> Simone Murgia — CV Web interattivo · Ultimo aggiornamento automatico</small>
     </footer>
   </div>
-
-  <button class="btn print" onclick="window.print()">Stampa / PDF</button>
-
-  <script>
-    // === MODIFICA QUI I TUOI DATI (copiando da LinkedIn) ===
-    const DATA = {
-      basics: {
-        name: "Simone Murgia",
-        role: "Data Integration Engineer",
-        headline_badges: ["DataOps", "ETL/ELT", "Azure", "SQL", "Python"],
-        email: "",
-        location: "Italia",
-        linkedin: "https://www.linkedin.com/in/simone-murgia/",
-        github: "",
-        pdf: "./Simone-Murgia-CV.pdf",
-        about: "Breve sommario professionale (2–3 frasi). Esempio: Ingegnere Data Integration con esperienza su pipeline ETL/ELT, orchestrazione e qualità del dato. Appassionato di automazione Dev/DataOps e documentazione eseguibile.",
-      },
-      skills: [
-        "Python", "SQL", "Azure Data Factory / Synapse", "Databricks", "Spark", "Airflow", "Docker", "Git/GitHub", "REST/GraphQL", "Power BI"
-      ],
-      experience: [
-        {
-          role: "Data Integration Engineer",
-          company: "NTT DATA",
-          period: "AAAA–oggi",
-          location: "{sede}",
-          bullets: [
-            "Progettazione e manutenzione pipeline ETL/ELT per integrazione dati da sistemi eterogenei.",
-            "Automazione deploy e versioning con GitHub/GitLab; monitoraggio qualità del dato.",
-            "Collaborazione con team cross‑funzionali per definizione KPI e data contracts."
-          ],
-          stack: ["Python","SQL","ADF/Synapse","Databricks","Spark"]
-        },
-        // Aggiungi altre esperienze qui…
-      ],
-      projects: [
-        {
-          name: "Template Data Quality Checks",
-          link: "#",
-          summary: "Libreria di controlli qualità dati riutilizzabili (null, duplicati, referential, distribuzioni).",
-          highlights: ["Configurazione YAML","Report HTML","CI su GitHub Actions"]
-        }
-      ],
-      education: [
-        { school: "{Università}", degree: "{Titolo}", period: "{anni}", notes: "{tesi o esami chiave}" }
-      ],
-      certifications: [
-        "{Es: Microsoft Certified: Azure Data Engineer Associate}",
-      ]
-    };
-
-    // === Rendering logic ===
-    const $ = (id) => document.getElementById(id);
-    const el = (tag, cls) => { const x = document.createElement(tag); if(cls) x.className = cls; return x; };
-
-    // Header links
-    $('contact-linkedin').href = DATA.basics.linkedin;
-    $('contact-email').href = DATA.basics.email ? `mailto:${DATA.basics.email}` : '#';
-    document.title = `${DATA.basics.name} · ${DATA.basics.role}`;
-
-    // Header badges
-    DATA.basics.headline_badges.forEach(b => { const s = el('span','badge'); s.textContent = b; $('header-badges').appendChild(s); });
-
-    // About
-    $('about').textContent = DATA.basics.about;
-
-    // Skills
-    const sc = $('skills-chips');
-    DATA.skills.forEach(s => { const c = el('span','chip'); c.textContent = s; sc.appendChild(c); });
-
-    // Experience
-    const ex = $('experience-list');
-    DATA.experience.forEach(j => {
-      const it = el('div','item');
-      const h = el('h3'); h.textContent = `${j.role} · ${j.company}`; it.appendChild(h);
-      const m = el('div','meta'); m.textContent = `${j.period} · ${j.location}`; it.appendChild(m);
-      const ul = el('ul'); j.bullets.forEach(b=>{ const li = el('li'); li.textContent = b; ul.appendChild(li); }); it.appendChild(ul);
-      if(j.stack?.length){ const chips = el('div','chips'); j.stack.forEach(s=>{ const c = el('span','chip'); c.textContent = s; chips.appendChild(c); }); it.appendChild(chips); }
-      ex.appendChild(it);
-    });
-
-    // Projects
-    const pj = $('projects-list');
-    DATA.projects.forEach(p => {
-      const it = el('div','item');
-      const h = el('h3'); const a = el('a'); a.href = p.link; a.textContent = p.name; a.target = '_blank'; h.appendChild(a); it.appendChild(h);
-      const m = el('div','meta'); m.textContent = p.summary; it.appendChild(m);
-      if(p.highlights?.length){ const ul = el('ul'); p.highlights.forEach(x=>{ const li = el('li'); li.textContent = x; ul.appendChild(li); }); it.appendChild(ul); }
-      pj.appendChild(it);
-    });
-
-    // Education & certs
-    const ed = $('education-list');
-    DATA.education.forEach(e=>{
-      const it = el('div','item');
-      const h = el('h3'); h.textContent = `${e.degree} · ${e.school}`; it.appendChild(h);
-      const m = el('div','meta'); m.textContent = e.period + (e.notes? ` · ${e.notes}`: ''); it.appendChild(m);
-      ed.appendChild(it);
-    });
-
-    const ct = $('cert-list');
-    DATA.certifications.forEach(c=>{ const s = el('div','item'); const h = el('h3'); h.textContent = c; s.appendChild(h); ct.appendChild(s); });
-
-    // Footer
-    $('year').textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear()</script>
 </body>
 </html>
