--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             <div class="d-flex flex-wrap gap-2">
               <span class="chip">Talend</span>
               <span class="chip">Informatica PowerCenter</span>
-              <span class="chip">Kafka</span>
+              <span class="chip">MongoDB</span>
               <span class="chip">Hive / Impala</span>
               <span class="chip">AWS</span>
               <span class="chip">TIBCO Spotfire</span>
               <span class="chip">Python</span>
               <span class="chip">SQL · Oracle · PostgreSQL</span>
-              <span class="chip">MongoDB</span>
+              <span class="chip">Kafka</span>
               <span class="chip">HTML · CSS · Bootstrap · TS</span>
             </div>
           </div>
@@ -102,7 +102,7 @@
             <div class="card-body">
               <h3 class="h6 mb-1">Junior Big Data Developer · Best Engage</h3>
               <div class="small text-secondary mb-2">01/2020 – 07/2020 · Roma</div>
-              <p class="mb-2">Ingestione ed elaborazione dati IoT con SQL, Spark, Kafka, Flink, Python.</p>
+              <p class="mb-2">Ingestion ed elaborazione dati IoT con SQL, Spark, Kafka, Flink, Python.</p>
             </div>
           </div>
         </div>
@@ -120,7 +120,7 @@
             <div class="card-body">
               <h3 class="h6 mb-1">Digital Archivist · Iomatica Sas</h3>
               <div class="small text-secondary mb-2">2013 – 2016 · Roma</div>
-              <p class="mb-2">Controllo e bonifica dati per Rai Archivio (multimedia TV/Radio).</p>
+              <p class="mb-2">Controllo e bonifica dati per Rai Archivio (Multimedia TV/Radio).</p>
             </div>
           </div>
         </div>
@@ -134,8 +134,8 @@
           <div class="card-body">
             <h2 class="h5 card-title">Istruzione</h2>
             <ul class="mb-0">
-              <li>Academy Big Data · Formatemp (2020, ~200h)</li>
-              <li>Laurea in Biologia · Università di Tor Vergata (2009–2015)</li>
+              <li>Academy Big Data · Formatemp (~200h)</li>
+              <li>Laurea in Biologia · Università di Tor Vergata (2009–2015 . NON CONCLUSA)</li>
               <li>Liceo Scientifico E. Majorana (2004–2009 · 75/100)</li>
             </ul>
           </div>
@@ -146,10 +146,10 @@
           <div class="card-body">
             <h2 class="h5 card-title">Certificazioni</h2>
             <ul class="mb-0">
-              <li>MongoDB SI Architect Certification (2023)</li>
+              <li>MongoDB SI Architect Certification</li>
               <li>TIBCO Spotfire® Certified Professional</li>
-              <li>Udemy: The Modern Python 3 Bootcamp (2018)</li>
-              <li>Udemy: Web Developer Bootcamp (2017)</li>
+              <li>Udemy: The Modern Python 3 Bootcamp</li>
+              <li>Udemy: Web Developer Bootcamp</li>
             </ul>
           </div>
         </section>
@@ -163,8 +163,8 @@
         <div class="col-12 col-md-6 col-xl-4">
           <article class="card section-card h-100">
             <div class="card-body">
-              <h3 class="h6">Template Data Quality Checks</h3>
-              <p class="small text-secondary">Libreria di controlli qualità dati (null, duplicati, referential, distribuzioni). Configurazione YAML, report HTML, CI su GitHub Actions.</p>
+              <h3 class="h6">Work in Progress</h3>
+              <p class="small text-secondary">Lorem ipsum</p>
               <a class="btn btn-sm btn-outline-info" href="#" target="_blank">Apri</a>
             </div>
           </article>
