--- a/index.html
+++ b/index.html
@@ -5,25 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Simone Murgia · Advanced Data Integration Engineer</title>
   <meta name="description" content="CV interattivo e portfolio di Simone Murgia, Advanced Data Integration Engineer presso NTT Data Italia." />
+  <meta name="theme-color" content="#0b1020" />
   <meta property="og:title" content="Simone Murgia · Advanced Data Integration Engineer" />
   <meta property="og:description" content="Esperto in Big Data, ETL/ELT, e integrazione dati per progetti enterprise." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="./og-image.png" />
-  <!-- Bootstrap 5 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Bootstrap 5 (no integrity hashes to avoid mismatches; crossorigin anonymous) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <!-- Custom CSS separato -->
   <link href="./styles.css" rel="stylesheet">
+  <!-- Structured data (Person) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Simone Murgia",
+    "jobTitle": "Advanced Data Integration Engineer",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "NTT Data Italia"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/in/simone-murgia/"
+    ],
+    "email": "mailto:S.Murgia1990@gmail.com"
+  }
+  </script>
 </head>
 <body>
+  <a class="skip-link" href="#main">Salta al contenuto</a>
+
   <!-- HERO -->
   <header class="hero border-bottom">
     <div class="container py-4">
       <div class="d-flex flex-wrap align-items-center gap-3">
-        <div class="avatar"></div>
+        <img class="avatar" src="./avatar.jpg" alt="Ritratto di Simone Murgia" width="74" height="74" />
         <div class="flex-grow-1">
           <h1 class="h2 mb-1">Simone Murgia</h1>
           <p class="text-secondary mb-2">Advanced Data Integration Engineer · NTT Data Italia</p>
-          <div class="d-flex flex-wrap gap-2" id="header-badges">
+          <div class="d-flex flex-wrap gap-2" id="header-badges" aria-hidden="false" aria-label="Competenze rapide">
             <span class="badge rounded-pill text-bg-info-subtle">Big Data</span>
             <span class="badge rounded-pill text-bg-info-subtle">ETL/ELT</span>
             <span class="badge rounded-pill text-bg-info-subtle">Kafka</span>
@@ -32,41 +55,49 @@
             <span class="badge rounded-pill text-bg-info-subtle">Python</span>
           </div>
         </div>
-        <div class="d-flex flex-wrap gap-2 ms-auto">
+
+        <div class="d-flex flex-wrap gap-2 ms-auto align-items-center">
           <a class="btn btn-primary" href="#progetti">Progetti</a>
           <a class="btn btn-outline-light" href="mailto:S.Murgia1990@gmail.com">Email</a>
-          <a class="btn btn-outline-light" href="https://www.linkedin.com/in/simone-murgia/" target="_blank" rel="noreferrer">LinkedIn</a>
+          <a class="btn btn-outline-light" href="https://www.linkedin.com/in/simone-murgia/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+
+          <!-- Theme toggle -->
+          <button id="theme-toggle" class="btn btn-outline-light" aria-pressed="false" aria-label="Attiva tema chiaro / scuro" title="Cambia tema">
+            <svg id="theme-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false">
+              <path d="M12 3v2M12 19v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4M12 7a5 5 0 100 10 5 5 0 000-10z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </button>
         </div>
       </div>
     </div>
   </header>
 
-  <main class="container my-4">
+  <main id="main" role="main" class="container my-4">
     <!-- Profilo + Competenze -->
     <div class="row g-3">
       <div class="col-12 col-lg-7">
-        <section class="card section-card h-100">
+        <section class="card section-card h-100" aria-labelledby="profilo-title">
           <div class="card-body">
-            <h2 class="h5 card-title">Profilo</h2>
-            <p class="mb-0">Ingegnere dei dati con esperienza in integrazione, orchestrazione e trasformazione di dati su piattaforme Big Data e cloud. Coinvolto in progetti enterprise per ENEL X presso NTT Data Italia, con focus su pipeline ETL/ELT e BI.</p>
+            <h2 id="profilo-title" class="h5 card-title">Profilo</h2>
+            <p class="mb-0">Ingegnere dei dati con esperienza in integrazione, orchestrazione e trasformazione di dati su piattaforme Big Data e cloud. Coinvolto in progetti enterprise per ENEL X [...]</p>
           </div>
         </section>
       </div>
       <div class="col-12 col-lg-5">
-        <section class="card section-card h-100">
+        <section class="card section-card h-100" aria-labelledby="competenze-title">
           <div class="card-body">
-            <h2 class="h5 card-title">Competenze</h2>
-            <div class="d-flex flex-wrap gap-2">
-              <span class="chip">Talend</span>
-              <span class="chip">Informatica PowerCenter</span>
-              <span class="chip">MongoDB</span>
-              <span class="chip">Hive / Impala</span>
-              <span class="chip">AWS</span>
-              <span class="chip">TIBCO Spotfire</span>
-              <span class="chip">Python</span>
-              <span class="chip">SQL · Oracle · PostgreSQL</span>
-              <span class="chip">Kafka</span>
-              <span class="chip">HTML · CSS · Bootstrap · TS</span>
+            <h2 id="competenze-title" class="h5 card-title">Competenze</h2>
+            <div class="d-flex flex-wrap gap-2" role="list">
+              <span class="chip" role="listitem">Talend</span>
+              <span class="chip" role="listitem">Informatica PowerCenter</span>
+              <span class="chip" role="listitem">MongoDB</span>
+              <span class="chip" role="listitem">Hive / Impala</span>
+              <span class="chip" role="listitem">AWS</span>
+              <span class="chip" role="listitem">TIBCO Spotfire</span>
+              <span class="chip" role="listitem">Python</span>
+              <span class="chip" role="listitem">SQL · Oracle · PostgreSQL</span>
+              <span class="chip" role="listitem">Kafka</span>
+              <span class="chip" role="listitem">HTML · CSS · Bootstrap · TS</span>
             </div>
           </div>
         </section>
@@ -74,8 +105,8 @@
     </div>
 
     <!-- Esperienza -->
-    <section id="esperienza" class="mt-3">
-      <h2 class="h5 mb-2">Esperienza</h2>
+    <section id="esperienza" class="mt-3" aria-labelledby="esperienza-title">
+      <h2 id="esperienza-title" class="h5 mb-2">Esperienza</h2>
       <div class="row g-3">
         <div class="col-12">
           <div class="card section-card">
@@ -87,7 +118,7 @@
                 <li>Dashboard business (TIBCO Spotfire, SAPBW/4HANA, Oracle SQL, HTML5/TS).</li>
                 <li>Flussi dati contatori 2G → datamart per EnelOne (Kafka, PowerCenter, Hive, MongoDB).</li>
               </ul>
-              <div class="d-flex flex-wrap gap-2">
+              <div class="d-flex flex-wrap gap-2" aria-hidden="false">
                 <span class="badge text-bg-secondary">Talend</span>
                 <span class="badge text-bg-secondary">Kafka</span>
                 <span class="badge text-bg-secondary">Hive</span>
@@ -97,6 +128,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-12 col-md-6">
           <div class="card section-card h-100">
             <div class="card-body">
@@ -106,6 +138,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-12 col-md-6">
           <div class="card section-card h-100">
             <div class="card-body">
@@ -115,6 +148,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-12 col-md-6">
           <div class="card section-card h-100">
             <div class="card-body">
@@ -124,15 +158,16 @@
             </div>
           </div>
         </div>
+
       </div>
     </section>
 
     <!-- Istruzione & Certificazioni -->
     <div class="row g-3 mt-1">
       <div class="col-12 col-lg-6">
-        <section class="card section-card h-100">
+        <section class="card section-card h-100" aria-labelledby="istruzione">
           <div class="card-body">
-            <h2 class="h5 card-title">Istruzione</h2>
+            <h2 id="istruzione" class="h5 card-title">Istruzione</h2>
             <ul class="mb-0">
               <li>Academy Big Data · Formatemp (~200h)</li>
               <li>Laurea in Biologia · Università di Tor Vergata (2009–2015 . NON CONCLUSA)</li>
@@ -142,9 +177,9 @@
         </section>
       </div>
       <div class="col-12 col-lg-6">
-        <section class="card section-card h-100">
+        <section class="card section-card h-100" aria-labelledby="certificazioni">
           <div class="card-body">
-            <h2 class="h5 card-title">Certificazioni</h2>
+            <h2 id="certificazioni" class="h5 card-title">Certificazioni</h2>
             <ul class="mb-0">
               <li>MongoDB SI Architect Certification</li>
               <li>TIBCO Spotfire® Certified Professional</li>
@@ -157,15 +192,17 @@
     </div>
 
     <!-- Progetti / Portfolio -->
-    <section id="progetti" class="mt-3">
-      <h2 class="h5 mb-2">Progetti</h2>
+    <section id="progetti" class="mt-3" aria-labelledby="progetti-title">
+      <h2 id="progetti-title" class="h5 mb-2">Progetti</h2>
       <div class="row g-3">
         <div class="col-12 col-md-6 col-xl-4">
           <article class="card section-card h-100">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h3 class="h6">Work in Progress</h3>
               <p class="small text-secondary">Lorem ipsum</p>
-              <a class="btn btn-sm btn-outline-info" href="#" target="_blank">Apri</a>
+              <div class="mt-auto">
+                <a class="btn btn-sm btn-outline-info" href="#" aria-disabled="true" tabindex="-1">Apri</a>
+              </div>
             </div>
           </article>
         </div>
@@ -181,6 +218,50 @@
   </footer>
 
   <script>document.getElementById('year').textContent = new Date().getFullYear()</script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+
+  <script>
+    (function() {
+      // Theme toggle: respects system preference and persists to localStorage
+      const root = document.documentElement;
+      const toggle = document.getElementById('theme-toggle');
+      const icon = document.getElementById('theme-icon');
+
+      function applyTheme(theme) {
+        if (theme === 'light') {
+          root.setAttribute('data-bs-theme', 'light');
+          toggle.setAttribute('aria-pressed', 'true');
+          // adjust theme icon (simple fill switch)
+          icon.style.filter = 'invert(0)';
+        } else {
+          root.setAttribute('data-bs-theme', 'dark');
+          toggle.setAttribute('aria-pressed', 'false');
+          icon.style.filter = 'invert(1)';
+        }
+      }
+
+      const stored = localStorage.getItem('site-theme');
+      if (stored) {
+        applyTheme(stored);
+      } else {
+        // fallback to system preference
+        const prefersLight = window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches;
+        applyTheme(prefersLight ? 'light' : 'dark');
+      }
+
+      toggle.addEventListener('click', () => {
+        const current = root.getAttribute('data-bs-theme') === 'light' ? 'light' : 'dark';
+        const next = current === 'light' ? 'dark' : 'light';
+        applyTheme(next);
+        localStorage.setItem('site-theme', next);
+      });
+
+      // Make skip link visible when focused (for accessibility)
+      const skip = document.querySelector('.skip-link');
+      skip.addEventListener('click', () => {
+        document.getElementById('main').focus();
+      });
+    })();
+  </script>
 </body>
 </html>
