--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </script>
 </head>
 <body>
-  <a class="skip-link" href="#main">Salta al contenuto</a>
+  <a class="skip-link d-none" href="#main">Salta al contenuto</a>
 
   <!-- HERO -->
   <header class="hero border-bottom">
