Small adjustment to DATA

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="card-body">
               <h3 class="h6 mb-1">Co‑Founder · Teeto/GGEZ Gaming</h3>
               <div class="small text-secondary mb-2">2016 – 2019 · Roma</div>
-              <p class="mb-2">Sviluppo aziendale e website, assistenza IT, stack web (NodeJS, Express, SQL).</p>
+              <p class="mb-2">Sviluppo network aziendale e website, assistenza IT, Web Stack (NodeJS, Express, SQL).</p>
             </div>
           </div>
         </div>
