Update avatar image source to new file location

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header class="hero border-bottom">
     <div class="container py-4">
       <div class="d-flex flex-wrap align-items-center gap-3">
-        <img class="avatar" src="./avatar.jpg" alt="Ritratto di Simone Murgia" width="74" height="74" />
+        <img class="avatar" src="./Files/FotoProfilo.jpg" alt="Ritratto di Simone Murgia" width="74" height="74" />
         <div class="flex-grow-1">
           <h1 class="h2 mb-1">Simone Murgia</h1>
           <p class="text-secondary mb-2">Advanced Data Integration Engineer · NTT Data Italia</p>
